2001-01-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSArray.m: Fix failure to assign result of init to self
	(similar fixes in various other files).
	* Tools/gsdoc.m: Fix error in parsing items containing mixed elements.
	* Documentation/gsdoc/NSTimeZone.gsdoc: Fix erro in markup.

2001-01-25  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.in: Add check for rexcent versions of gmp

2001-01-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSException.m: Modify default handler to permit simple
	exit as well as abort.
	* Documentation/gsdoc/Base.gsdoc: documented environmnet variable
	CRASH_ON_ABORT

2001-01-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Fixes for OPENSTEP compatibility in string path
	operations - patch provided by Pierre-Yves Rivaille, plus another fix
	by me.

2001-01-19  Nicola Pero  <nicola@brainstorm.co.uk>

	* gnustep-base.spec.in: Updated copyright and attempt at improving
	description.

2001-01-19  Nicola Pero  <nicola@brainstorm.co.uk>

	* config/config.loadtest.m: Added dummy NXConstStr implementation 
	for libobjc which do not include it. 
	* configure.in: Simplified check for thread flags.  gnustep-make
	already gets them - simply get them from config.make here.
	* configure: Regenerated.
	* config/config_thread.m: Removed.
	
2001-01-17  Adam Fedor  <fedor@gnu.org>

	* Version: Prerelease version 0.9.0
	* configure.in: Change check for installed libobjc to match gstep-make

2001-01-18  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/GNUmakefile: Simplified name to gnustep-base.
	* gnustep-base.spec.in: Changed Group to Development/Libraries.
	* gnustep-base-debug.spec.in: Idem.
	* NSTimeZones/NSTimeZones.tar: Removed hard links to avoid rpm
	problems with hard links.

2001-01-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSHost.m: New method ([-_addName:]) to add a name to a host.
	Use it to add the local hostname to the 127.0.0.1 host if there is
	no IP address set up for the local machine.